source/stylesheets/_constants.scss
$def-transition_duration: 0.2s;

$def-green-ultralight: #f5fefb;
$def-green-verylight: #d2f7f1;
$def-green-light: #c8e7e2;
$def-green: #3bc3a3;
$def-green-shade: #3aa792;
$def-danger-shade: #d5681e;
$def-danger: #f0741f;
$def-danger-light: #f4dfd1;
$def-purple: #8151a8;
$def-purple-light: #ebdef6;
$def-blue-shade: #009dd8;
$def-blue: #00aeef;
$def-blue-light: #d1ecf6;
$def-verydarkgrey: #363636;
$def-darkgrey: #6a6a6a;
$def-mediumdarkgrey: #959595;
$def-grey: #aaaaaa;
$def-mediumlightgrey: #cccccc;
$def-lightgrey: #d7d7d7;
$def-verylightgrey: #ebebeb;
$def-ultralightgrey: #f4f4f4;

$def-radius: 3px;
$def-button-border_radius: $def-radius;
$def-progress_indicator-radius: $def-radius;

$zindex-checkbox: 0;
$zindex-step_description_open: 0;
$zindex-file_uploader_input: 10;
$zindex-dragged_element: 20;
$zindex-sticky_header: 50;
$zindex-save_indicator: 62;
$zindex-workflow_selector: 75;
$zindex-add_step_sidebar: 80;
$zindex-add_step-selected_step_clickables: 82;
$zindex-popover: 90;
$zindex-popup: 100;

$main-horizontalpadding: 27px;
$main-horizontalpadding_small: 15px;
$main-verticalpadding: 20px;

$cardo-horizontalpadding: 18px;
$cardo-verticalpadding: 12px;

@mixin OpenSansWithFallback {
	font-family: "Open Sans", sans-serif;
}

@mixin SourceCodeProWithFallback {
	font-family: "Source Code Pro", monospace;
}

@mixin GothamWithFallback {
	font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
}

@function triangle_as_svg_content($width, $height) {
	@return svg_with_content("<polygon points='#{ $width / 2 },0 #{ $width },#{ $height }, 0,#{ $height }'/>", $width, $height);
}

